--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,8 @@
     font-weight: normal;
     font-style: normal;
 }
-html {
-    font-family: "GmarketSansMedium";
+
+html{
+    font-family: 'GmarketSansMedium';
     text-underline-position: under;
 }
